--- a/client/signin/index.html
+++ b/client/signin/index.html
@@ -24,6 +24,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <title>Project</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <link rel="icon" type="image/x-icon" href="/signin/logo_app_claro.png">
+
 
     
 
