--- a/client/app2/index.html
+++ b/client/app2/index.html
@@ -63,7 +63,7 @@
                                 <div style="margin-bottom: 15px; background-color: rgb(245, 245, 245); border-radius: 5px; height: 60px; width: 90%;     font-weight: bold;
                                 display: flex; cursor: pointer;
                                 justify-content: center;
-                                align-items: center;" v-for="perfil in perfiles" v-if="perfil.username.toLowerCase().includes(searchTerm.toLowerCase())" v-on:click="showPerfil(perfil.username)">
+                                align-items: center;" v-for="perfil in perfiles" v-if="perfil.username.toLowerCase().includes(searchTerm.toLowerCase())" v-on:click="showPerfil(perfil._id)">
                                    <v-avatar style="position: unset; margin-right: 10px;" class="avatar">
                                     <img :src="perfil.url_img" referrerpolicy="no-referrer"></img>
                                 </v-avatar> 
@@ -89,7 +89,7 @@
                                     <v-avatar class="avatar">
                                         <img :src="publicacion.user_img"  referrerpolicy="no-referrer"></v-img>
                                     </v-avatar>
-                                    <div class="name-header"><a  style="color: black; text-decoration: none;" @click="showPerfil(publicacion.owner_name)">{{publicacion.owner_name}}</a></div>
+                                    <div class="name-header"><a  style="color: black; text-decoration: none;" @click="showPerfil(publicacion.owner)">{{publicacion.owner_name}}</a></div>
                                     <div class="share-header"><v-btn @click="tryShare()" value="share" style="box-shadow: none !important; background-color: transparent !important;"><v-icon>mdi-share</v-icon></v-btn></div>
                                 </div>
                                 <p class="text-descr">{{publicacion.text}}
